items spacing removed and grand totall border issue fixed

--- a/forever/www/order/css/items.css
+++ b/forever/www/order/css/items.css
@@ -567,7 +567,7 @@ color: #404040;
     display: flex;
     flex-direction: column;
     gap: 7px;
-    width:50%;
+    /* width:50%; */
 }
 .cart-summery .amt{
     border-bottom: 1px solid #0000005c;
@@ -589,16 +589,36 @@ margin: 5px 0;
 font-size: 14px;
 }
 .grand-total{
-text-align: right;
-font-size: 14px;
-color: #000;
-font-weight: 400;
-margin-top: -15px;
-padding-bottom:15px;
-
+    text-align: right;
+    font-size: 14px;
+    color: #000;
+    font-weight: 400;
+    margin-top: -14px;
+    padding-bottom: 15px;
+    border-top: 1px solid #404040;
+    padding-top: 10px;
+}
+.mt-4, .my-4 {
+    margin-top: 0rem !important;
+}
+.my-4 {
+    margin-bottom: 0rem !important;
 }
 
 @media(max-width:650px) {
+    .mt-4, .my-4 {
+        margin-top: 0rem !important;
+    }
+    .my-4 {
+        margin-bottom: 0rem !important;
+    }
+    .container {
+        width: 100%;
+        padding-right: 0px !important;
+        padding-left: 0px !important;
+        margin-right: 0px !important;
+        margin-left: 0px !important;
+    }
     .login-wrap {
         min-height: 100vh;
         margin-top: 0vh;
